Fixed "flashing" problems when expanding/collapsing groups.

--- a/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
+++ b/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
@@ -536,12 +536,16 @@ $fixed-row-class: fixed-row;
             padding: 0.5rem 0;
 
             .group-cell-content {
-              kup-image,
+              .icon-container,
               .indent {
                 float: left;
               }
-              kup-image {
+              .icon-container {
                 margin: 0 0.25rem;
+                height: 1.25rem;
+                width: 1.25rem;
+              }
+              kup-image {
                 &.collapsed {
                   transform: rotate(90deg);
                 }
@@ -738,11 +742,9 @@ $fixed-row-class: fixed-row;
         tbody > tr > td {
           padding-top: 0.2rem;
           padding-bottom: 0.2rem;
-          transition: padding 0.1s;
         }
         tbody > tr.group > td {
           padding: 0.25rem 0;
-          transition: padding 0.1s;
         }
       }
 
@@ -750,11 +752,9 @@ $fixed-row-class: fixed-row;
         tbody > tr > td {
           padding-top: 1rem;
           padding-bottom: 1rem;
-          transition: padding 0.1s;
         }
         tbody > tr.group > td {
           padding: 0.75rem 0;
-          transition: padding 0.1s;
         }
       }
     }
